logs/ahdp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ahdp'...
Listing './lib/python3.5/site-packages/ahdp/module_utils'...
Compiling './lib/python3.5/site-packages/ahdp/module_utils/hdfsbase.py'...
***   File "./lib/python3.5/site-packages/ahdp/module_utils/hdfsbase.py", line 91
    print check
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ahdp/module_utils/hs2base.py'...
***   File "./lib/python3.5/site-packages/ahdp/module_utils/hs2base.py", line 106
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ahdp/modules'...
Listing './lib/python3.5/site-packages/ahdp/modules/hadoop'...
Listing './lib/python3.5/site-packages/ahdp/modules/hadoop/hdfs'...
Compiling './lib/python3.5/site-packages/ahdp/modules/hadoop/hdfs/hdfsdownload.py'...
***   File "./lib/python3.5/site-packages/ahdp/modules/hadoop/hdfs/hdfsdownload.py", line 146
    except OSError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ahdp/modules/hadoop/hive'...
Compiling './lib/python3.5/site-packages/ahdp/modules/hadoop/hive/hive_db.py'...
***   File "./lib/python3.5/site-packages/ahdp/modules/hadoop/hive/hive_db.py", line 164
    except (DatabaseError,RPCError), e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ahdp-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
